@@ -1070,7 +1070,6 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 
 				while(!stop &&
 						!(error = (b->last_was_regexp ? find_regexp : find)(b, NULL, !first_search && a != REPLACEALL_A && c != 'A' && c != 'Y', false))) {
-					fprintf(stderr,"first_search:%d, c:%c\n", first_search, c);
 
 					if (c != 'A' && a != REPLACEALL_A && a != REPLACEONCE_A) {
 						refresh_window(b);
@@ -1097,10 +1096,9 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 							}
 
 							num_replace++;
-
-							if (last_replace_empty_match)
-								if (b->opt.search_back) error = char_left(cur_buffer);
-								else error = char_right(cur_buffer);
+							if (b->opt.search_back) error = char_left(b) ? NOT_FOUND : OK;
+							else if (last_replace_empty_match) error = char_right(cur_buffer) ? NOT_FOUND : OK;
+							if (error) break;
 						}
 
 						if (print_error(error)) {
@@ -1172,7 +1170,8 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 		error = OK;
 		int64_t num_replace = 0;
 		start_undo_chain(b);
-		for (int64_t i = 0; i < c && ! stop && ! (error = (b->last_was_regexp ? find_regexp : find)(b, NULL, !b->last_was_replace, perform_wrap > 0)); i++)
+
+		for (int64_t i = 0; i < c && ! stop && ! (error = (b->last_was_regexp ? find_regexp : find)(b, NULL, !b->last_was_replace||((b->cur_pos + b->cur_line == 0)&&b->opt.search_back), perform_wrap > 0)); i++)
 			if (b->last_was_replace) {
 				const int64_t cur_char = b->cur_char;
 				const int cur_x = b->cur_x;
@@ -1190,9 +1189,9 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 
 					num_replace++;
 
-					if (last_replace_empty_match)
-						if (b->opt.search_back) error = char_left(cur_buffer);
-						else error = char_right(cur_buffer);
+					if (b->opt.search_back) error = char_left(b) ? NOT_FOUND : OK;
+					else if (last_replace_empty_match) error = char_right(cur_buffer) ? NOT_FOUND : OK;
+
 				}
 
 				if (error) break;
